python/Yacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    OF
    RECORD
    RETURN
    TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> header SEMI block DOT
Rule 2     program -> statement_sequence
Rule 3     header -> PROGRAM identifier
Rule 4     block -> variable_declaration_part procedure_or_function statement_part
Rule 5     variable_declaration_part -> VAR variable_declaration_list
Rule 6     variable_declaration_part -> <empty>
Rule 7     variable_declaration_list -> variable_declaration variable_declaration_list
Rule 8     variable_declaration_list -> variable_declaration
Rule 9     variable_declaration -> variable_identifier COLON type SEMI
Rule 10    variable_identifier -> identifier COMMA variable_identifier
Rule 11    variable_identifier -> identifier
Rule 12    procedure_or_function -> proc_or_func_declaration SEMI procedure_or_function
Rule 13    procedure_or_function -> <empty>
Rule 14    proc_or_func_declaration -> procedure_declaration
Rule 15    proc_or_func_declaration -> function_declaration
Rule 16    procedure_declaration -> procedure_heading SEMI block
Rule 17    procedure_heading -> PROCEDURE identifier
Rule 18    procedure_heading -> PROCEDURE identifier LPAREN parameter_list RPAREN
Rule 19    function_declaration -> function_heading SEMI block
Rule 20    function_heading -> FUNCTION type
Rule 21    function_heading -> FUNCTION identifier COLON type
Rule 22    function_heading -> FUNCTION identifier LPAREN parameter_list RPAREN COLON type
Rule 23    parameter_list -> parameter COMMA parameter_list
Rule 24    parameter_list -> parameter
Rule 25    parameter -> identifier COLON type
Rule 26    type -> STRING
Rule 27    type -> INTEGER
Rule 28    type -> CHAR
Rule 29    statement_part -> BEGIN statement_sequence END
Rule 30    statement_sequence -> statement SEMI statement_sequence
Rule 31    statement_sequence -> statement
Rule 32    statement -> assignment_statement
Rule 33    statement -> statement_part
Rule 34    statement -> if_statement
Rule 35    statement -> while_statement
Rule 36    statement -> repeat_statement
Rule 37    statement -> for_statement
Rule 38    statement -> procedure_or_function_call
Rule 39    statement -> <empty>
Rule 40    procedure_or_function_call -> identifier LPAREN param_list RPAREN
Rule 41    procedure_or_function_call -> identifier
Rule 42    param_list -> param_list COMMA param
Rule 43    param_list -> param
Rule 44    param -> expression
Rule 45    if_statement -> IF expression THEN statement ELSE statement ENDIF
Rule 46    if_statement -> IF expression THEN statement ELSIF statement ENDIF
Rule 47    if_statement -> IF expression THEN statement ENDIF
Rule 48    while_statement -> WHILE expression LOOP statement ENDLOOP
Rule 49    repeat_statement -> REPEAT statement UNTIL expression
Rule 50    for_statement -> FOR assignment_statement TO expression LOOP statement ENDLOOP
Rule 51    for_statement -> FOR assignment_statement DOWNTO expression LOOP statement ENDLOOP
Rule 52    assignment_statement -> identifier COLEQ expression
Rule 53    expression -> expression and_or expression_m
Rule 54    expression -> expression_m
Rule 55    expression_m -> expression_s
Rule 56    expression_m -> expression_m sign expression_s
Rule 57    expression_s -> element
Rule 58    expression_s -> expression_s psign element
Rule 59    and_or -> AND
Rule 60    and_or -> OR
Rule 61    psign -> TIMES
Rule 62    psign -> DIV
Rule 63    sign -> PLUS
Rule 64    sign -> MINUS
Rule 65    sign -> EQ
Rule 66    sign -> NE
Rule 67    sign -> LT
Rule 68    sign -> LE
Rule 69    sign -> GT
Rule 70    sign -> GE
Rule 71    element -> identifier
Rule 72    element -> integer
Rule 73    element -> string
Rule 74    element -> char
Rule 75    element -> LPAREN expression RPAREN
Rule 76    element -> NOT element
Rule 77    identifier -> ID
Rule 78    integer -> ICONST
Rule 79    string -> SCONST
Rule 80    char -> CCONST

Terminals, with rules where they appear

AND                  : 59
ARRAY                : 
BEGIN                : 29
CCONST               : 80
CHAR                 : 28
COLEQ                : 52
COLON                : 9 21 22 25
COMMA                : 10 23 42
DIV                  : 62
DOT                  : 1
DOWNTO               : 51
ELSE                 : 45
ELSIF                : 46
END                  : 29
ENDIF                : 45 46 47
ENDLOOP              : 48 50 51
EQ                   : 65
FOR                  : 50 51
FUNCTION             : 20 21 22
GE                   : 70
GT                   : 69
ICONST               : 78
ID                   : 77
IF                   : 45 46 47
INTEGER              : 27
LE                   : 68
LOOP                 : 48 50 51
LPAREN               : 18 22 40 75
LT                   : 67
MINUS                : 64
NE                   : 66
NOT                  : 76
OF                   : 
OR                   : 60
PLUS                 : 63
PROCEDURE            : 17 18
PROGRAM              : 3
RECORD               : 
REPEAT               : 49
RETURN               : 
RPAREN               : 18 22 40 75
SCONST               : 79
SEMI                 : 1 9 12 16 19 30
STRING               : 26
THEN                 : 45 46 47
TIMES                : 61
TO                   : 50
TYPE                 : 
UNTIL                : 49
VAR                  : 5
WHILE                : 48
error                : 

Nonterminals, with rules where they appear

and_or               : 53
assignment_statement : 32 50 51
block                : 1 16 19
char                 : 74
element              : 57 58 76
expression           : 44 45 46 47 48 49 50 51 52 53 75
expression_m         : 53 54 56
expression_s         : 55 56 58
for_statement        : 37
function_declaration : 15
function_heading     : 19
header               : 1
identifier           : 3 10 11 17 18 21 22 25 40 41 52 71
if_statement         : 34
integer              : 72
param                : 42 43
param_list           : 40 42
parameter            : 23 24
parameter_list       : 18 22 23
proc_or_func_declaration : 12
procedure_declaration : 14
procedure_heading    : 16
procedure_or_function : 4 12
procedure_or_function_call : 38
program              : 0
psign                : 58
repeat_statement     : 36
sign                 : 56
statement            : 30 31 45 45 46 46 47 48 49 50 51
statement_part       : 4 33
statement_sequence   : 2 29 30
string               : 73
type                 : 9 20 21 22 25
variable_declaration : 7 8
variable_declaration_list : 5 7
variable_declaration_part : 4
variable_identifier  : 9 10
while_statement      : 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header SEMI block DOT
    (2) program -> . statement_sequence
    (3) header -> . PROGRAM identifier
    (30) statement_sequence -> . statement SEMI statement_sequence
    (31) statement_sequence -> . statement
    (32) statement -> . assignment_statement
    (33) statement -> . statement_part
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . repeat_statement
    (37) statement -> . for_statement
    (38) statement -> . procedure_or_function_call
    (39) statement -> .
    (52) assignment_statement -> . identifier COLEQ expression
    (29) statement_part -> . BEGIN statement_sequence END
    (45) if_statement -> . IF expression THEN statement ELSE statement ENDIF
    (46) if_statement -> . IF expression THEN statement ELSIF statement ENDIF
    (47) if_statement -> . IF expression THEN statement ENDIF
    (48) while_statement -> . WHILE expression LOOP statement ENDLOOP
    (49) repeat_statement -> . REPEAT statement UNTIL expression
    (50) for_statement -> . FOR assignment_statement TO expression LOOP statement ENDLOOP
    (51) for_statement -> . FOR assignment_statement DOWNTO expression LOOP statement ENDLOOP
    (40) procedure_or_function_call -> . identifier LPAREN param_list RPAREN
    (41) procedure_or_function_call -> . identifier
    (77) identifier -> . ID

    PROGRAM         shift and go to state 4
    SEMI            reduce using rule 39 (statement -> .)
    $end            reduce using rule 39 (statement -> .)
    BEGIN           shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    program                        shift and go to state 1
    header                         shift and go to state 2
    statement_sequence             shift and go to state 3
    identifier                     shift and go to state 5
    statement                      shift and go to state 6
    assignment_statement           shift and go to state 7
    statement_part                 shift and go to state 8
    if_statement                   shift and go to state 9
    while_statement                shift and go to state 10
    repeat_statement               shift and go to state 11
    for_statement                  shift and go to state 12
    procedure_or_function_call     shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> header . SEMI block DOT

    SEMI            shift and go to state 20


state 3

    (2) program -> statement_sequence .

    $end            reduce using rule 2 (program -> statement_sequence .)


state 4

    (3) header -> PROGRAM . identifier
    (77) identifier -> . ID

    ID              shift and go to state 19

    identifier                     shift and go to state 21

state 5

    (52) assignment_statement -> identifier . COLEQ expression
    (40) procedure_or_function_call -> identifier . LPAREN param_list RPAREN
    (41) procedure_or_function_call -> identifier .

    COLEQ           shift and go to state 22
    LPAREN          shift and go to state 23
    SEMI            reduce using rule 41 (procedure_or_function_call -> identifier .)
    $end            reduce using rule 41 (procedure_or_function_call -> identifier .)
    END             reduce using rule 41 (procedure_or_function_call -> identifier .)
    UNTIL           reduce using rule 41 (procedure_or_function_call -> identifier .)
    ELSE            reduce using rule 41 (procedure_or_function_call -> identifier .)
    ELSIF           reduce using rule 41 (procedure_or_function_call -> identifier .)
    ENDIF           reduce using rule 41 (procedure_or_function_call -> identifier .)
    ENDLOOP         reduce using rule 41 (procedure_or_function_call -> identifier .)


state 6

    (30) statement_sequence -> statement . SEMI statement_sequence
    (31) statement_sequence -> statement .

    SEMI            shift and go to state 24
    $end            reduce using rule 31 (statement_sequence -> statement .)
    END             reduce using rule 31 (statement_sequence -> statement .)


state 7

    (32) statement -> assignment_statement .

    SEMI            reduce using rule 32 (statement -> assignment_statement .)
    $end            reduce using rule 32 (statement -> assignment_statement .)
    END             reduce using rule 32 (statement -> assignment_statement .)
    UNTIL           reduce using rule 32 (statement -> assignment_statement .)
    ELSE            reduce using rule 32 (statement -> assignment_statement .)
    ELSIF           reduce using rule 32 (statement -> assignment_statement .)
    ENDIF           reduce using rule 32 (statement -> assignment_statement .)
    ENDLOOP         reduce using rule 32 (statement -> assignment_statement .)


state 8

    (33) statement -> statement_part .

    SEMI            reduce using rule 33 (statement -> statement_part .)
    $end            reduce using rule 33 (statement -> statement_part .)
    END             reduce using rule 33 (statement -> statement_part .)
    UNTIL           reduce using rule 33 (statement -> statement_part .)
    ELSE            reduce using rule 33 (statement -> statement_part .)
    ELSIF           reduce using rule 33 (statement -> statement_part .)
    ENDIF           reduce using rule 33 (statement -> statement_part .)
    ENDLOOP         reduce using rule 33 (statement -> statement_part .)


state 9

    (34) statement -> if_statement .

    SEMI            reduce using rule 34 (statement -> if_statement .)
    $end            reduce using rule 34 (statement -> if_statement .)
    END             reduce using rule 34 (statement -> if_statement .)
    UNTIL           reduce using rule 34 (statement -> if_statement .)
    ELSE            reduce using rule 34 (statement -> if_statement .)
    ELSIF           reduce using rule 34 (statement -> if_statement .)
    ENDIF           reduce using rule 34 (statement -> if_statement .)
    ENDLOOP         reduce using rule 34 (statement -> if_statement .)


state 10

    (35) statement -> while_statement .

    SEMI            reduce using rule 35 (statement -> while_statement .)
    $end            reduce using rule 35 (statement -> while_statement .)
    END             reduce using rule 35 (statement -> while_statement .)
    UNTIL           reduce using rule 35 (statement -> while_statement .)
    ELSE            reduce using rule 35 (statement -> while_statement .)
    ELSIF           reduce using rule 35 (statement -> while_statement .)
    ENDIF           reduce using rule 35 (statement -> while_statement .)
    ENDLOOP         reduce using rule 35 (statement -> while_statement .)


state 11

    (36) statement -> repeat_statement .

    SEMI            reduce using rule 36 (statement -> repeat_statement .)
    $end            reduce using rule 36 (statement -> repeat_statement .)
    END             reduce using rule 36 (statement -> repeat_statement .)
    UNTIL           reduce using rule 36 (statement -> repeat_statement .)
    ELSE            reduce using rule 36 (statement -> repeat_statement .)
    ELSIF           reduce using rule 36 (statement -> repeat_statement .)
    ENDIF           reduce using rule 36 (statement -> repeat_statement .)
    ENDLOOP         reduce using rule 36 (statement -> repeat_statement .)


state 12

    (37) statement -> for_statement .

    SEMI            reduce using rule 37 (statement -> for_statement .)
    $end            reduce using rule 37 (statement -> for_statement .)
    END             reduce using rule 37 (statement -> for_statement .)
    UNTIL           reduce using rule 37 (statement -> for_statement .)
    ELSE            reduce using rule 37 (statement -> for_statement .)
    ELSIF           reduce using rule 37 (statement -> for_statement .)
    ENDIF           reduce using rule 37 (statement -> for_statement .)
    ENDLOOP         reduce using rule 37 (statement -> for_statement .)


state 13

    (38) statement -> procedure_or_function_call .

    SEMI            reduce using rule 38 (statement -> procedure_or_function_call .)
    $end            reduce using rule 38 (statement -> procedure_or_function_call .)
    END             reduce using rule 38 (statement -> procedure_or_function_call .)
    UNTIL           reduce using rule 38 (statement -> procedure_or_function_call .)
    ELSE            reduce using rule 38 (statement -> procedure_or_function_call .)
    ELSIF           reduce using rule 38 (statement -> procedure_or_function_call .)
    ENDIF           reduce using rule 38 (statement -> procedure_or_function_call .)
    ENDLOOP         reduce using rule 38 (statement -> procedure_or_function_call .)


state 14

    (29) statement_part -> BEGIN . statement_sequence END
    (30) statement_sequence -> . statement SEMI statement_sequence
    (31) statement_sequence -> . statement
    (32) statement -> . assignment_statement
    (33) statement -> . statement_part
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . repeat_statement
    (37) statement -> . for_statement
    (38) statement -> . procedure_or_function_call
    (39) statement -> .
    (52) assignment_statement -> . identifier COLEQ expression
    (29) statement_part -> . BEGIN statement_sequence END
    (45) if_statement -> . IF expression THEN statement ELSE statement ENDIF
    (46) if_statement -> . IF expression THEN statement ELSIF statement ENDIF
    (47) if_statement -> . IF expression THEN statement ENDIF
    (48) while_statement -> . WHILE expression LOOP statement ENDLOOP
    (49) repeat_statement -> . REPEAT statement UNTIL expression
    (50) for_statement -> . FOR assignment_statement TO expression LOOP statement ENDLOOP
    (51) for_statement -> . FOR assignment_statement DOWNTO expression LOOP statement ENDLOOP
    (40) procedure_or_function_call -> . identifier LPAREN param_list RPAREN
    (41) procedure_or_function_call -> . identifier
    (77) identifier -> . ID

    SEMI            reduce using rule 39 (statement -> .)
    END             reduce using rule 39 (statement -> .)
    BEGIN           shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    statement_sequence             shift and go to state 25
    statement                      shift and go to state 6
    assignment_statement           shift and go to state 7
    statement_part                 shift and go to state 8
    if_statement                   shift and go to state 9
    while_statement                shift and go to state 10
    repeat_statement               shift and go to state 11
    for_statement                  shift and go to state 12
    procedure_or_function_call     shift and go to state 13
    identifier                     shift and go to state 5

state 15

    (45) if_statement -> IF . expression THEN statement ELSE statement ENDIF
    (46) if_statement -> IF . expression THEN statement ELSIF statement ENDIF
    (47) if_statement -> IF . expression THEN statement ENDIF
    (53) expression -> . expression and_or expression_m
    (54) expression -> . expression_m
    (55) expression_m -> . expression_s
    (56) expression_m -> . expression_m sign expression_s
    (57) expression_s -> . element
    (58) expression_s -> . expression_s psign element
    (71) element -> . identifier
    (72) element -> . integer
    (73) element -> . string
    (74) element -> . char
    (75) element -> . LPAREN expression RPAREN
    (76) element -> . NOT element
    (77) identifier -> . ID
    (78) integer -> . ICONST
    (79) string -> . SCONST
    (80) char -> . CCONST

    LPAREN          shift and go to state 34
    NOT             shift and go to state 35
    ID              shift and go to state 19
    ICONST          shift and go to state 36
    SCONST          shift and go to state 37
    CCONST          shift and go to state 38

    expression                     shift and go to state 26
    expression_m                   shift and go to state 27
    expression_s                   shift and go to state 28
    element                        shift and go to state 29
    identifier                     shift and go to state 30
    integer                        shift and go to state 31
    string                         shift and go to state 32
    char                           shift and go to state 33

state 16

    (48) while_statement -> WHILE . expression LOOP statement ENDLOOP
    (53) expression -> . expression and_or expression_m
    (54) expression -> . expression_m
    (55) expression_m -> . expression_s
    (56) expression_m -> . expression_m sign expression_s
    (57) expression_s -> . element
    (58) expression_s -> . expression_s psign element
    (71) element -> . identifier
    (72) element -> . integer
    (73) element -> . string
    (74) element -> . char
    (75) element -> . LPAREN expression RPAREN
    (76) element -> . NOT element
    (77) identifier -> . ID
    (78) integer -> . ICONST
    (79) string -> . SCONST
    (80) char -> . CCONST

    LPAREN          shift and go to state 34
    NOT             shift and go to state 35
    ID              shift and go to state 19
    ICONST          shift and go to state 36
    SCONST          shift and go to state 37
    CCONST          shift and go to state 38

    expression                     shift and go to state 39
    expression_m                   shift and go to state 27
    expression_s                   shift and go to state 28
    element                        shift and go to state 29
    identifier                     shift and go to state 30
    integer                        shift and go to state 31
    string                         shift and go to state 32
    char                           shift and go to state 33

state 17

    (49) repeat_statement -> REPEAT . statement UNTIL expression
    (32) statement -> . assignment_statement
    (33) statement -> . statement_part
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . repeat_statement
    (37) statement -> . for_statement
    (38) statement -> . procedure_or_function_call
    (39) statement -> .
    (52) assignment_statement -> . identifier COLEQ expression
    (29) statement_part -> . BEGIN statement_sequence END
    (45) if_statement -> . IF expression THEN statement ELSE statement ENDIF
    (46) if_statement -> . IF expression THEN statement ELSIF statement ENDIF
    (47) if_statement -> . IF expression THEN statement ENDIF
    (48) while_statement -> . WHILE expression LOOP statement ENDLOOP
    (49) repeat_statement -> . REPEAT statement UNTIL expression
    (50) for_statement -> . FOR assignment_statement TO expression LOOP statement ENDLOOP
    (51) for_statement -> . FOR assignment_statement DOWNTO expression LOOP statement ENDLOOP
    (40) procedure_or_function_call -> . identifier LPAREN param_list RPAREN
    (41) procedure_or_function_call -> . identifier
    (77) identifier -> . ID

    UNTIL           reduce using rule 39 (statement -> .)
    BEGIN           shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    statement                      shift and go to state 40
    assignment_statement           shift and go to state 7
    statement_part                 shift and go to state 8
    if_statement                   shift and go to state 9
    while_statement                shift and go to state 10
    repeat_statement               shift and go to state 11
    for_statement                  shift and go to state 12
    procedure_or_function_call     shift and go to state 13
    identifier                     shift and go to state 5

state 18

    (50) for_statement -> FOR . assignment_statement TO expression LOOP statement ENDLOOP
    (51) for_statement -> FOR . assignment_statement DOWNTO expression LOOP statement ENDLOOP
    (52) assignment_statement -> . identifier COLEQ expression
    (77) identifier -> . ID

    ID              shift and go to state 19

    assignment_statement           shift and go to state 41
    identifier                     shift and go to state 42

state 19

    (77) identifier -> ID .

    COLEQ           reduce using rule 77 (identifier -> ID .)
    LPAREN          reduce using rule 77 (identifier -> ID .)
    SEMI            reduce using rule 77 (identifier -> ID .)
    $end            reduce using rule 77 (identifier -> ID .)
    END             reduce using rule 77 (identifier -> ID .)
    TIMES           reduce using rule 77 (identifier -> ID .)
    DIV             reduce using rule 77 (identifier -> ID .)
    PLUS            reduce using rule 77 (identifier -> ID .)
    MINUS           reduce using rule 77 (identifier -> ID .)
    EQ              reduce using rule 77 (identifier -> ID .)
    NE              reduce using rule 77 (identifier -> ID .)
    LT              reduce using rule 77 (identifier -> ID .)
    LE              reduce using rule 77 (identifier -> ID .)
    GT              reduce using rule 77 (identifier -> ID .)
    GE              reduce using rule 77 (identifier -> ID .)
    THEN            reduce using rule 77 (identifier -> ID .)
    AND             reduce using rule 77 (identifier -> ID .)
    OR              reduce using rule 77 (identifier -> ID .)
    LOOP            reduce using rule 77 (identifier -> ID .)
    UNTIL           reduce using rule 77 (identifier -> ID .)
    TO              reduce using rule 77 (identifier -> ID .)
    DOWNTO          reduce using rule 77 (identifier -> ID .)
    ELSE            reduce using rule 77 (identifier -> ID .)
    ELSIF           reduce using rule 77 (identifier -> ID .)
    ENDIF           reduce using rule 77 (identifier -> ID .)
    ENDLOOP         reduce using rule 77 (identifier -> ID .)
    RPAREN          reduce using rule 77 (identifier -> ID .)
    COMMA           reduce using rule 77 (identifier -> ID .)
    COLON           reduce using rule 77 (identifier -> ID .)


state 20

    (1) program -> header SEMI . block DOT
    (4) block -> . variable_declaration_part procedure_or_function statement_part
    (5) variable_declaration_part -> . VAR variable_declaration_list
    (6) variable_declaration_part -> .

    VAR             shift and go to state 45
    PROCEDURE       reduce using rule 6 (variable_declaration_part -> .)
    FUNCTION        reduce using rule 6 (variable_declaration_part -> .)
    BEGIN           reduce using rule 6 (variable_declaration_part -> .)

    block                          shift and go to state 43
    variable_declaration_part      shift and go to state 44

state 21

    (3) header -> PROGRAM identifier .

    SEMI            reduce using rule 3 (header -> PROGRAM identifier .)


state 22

    (52) assignment_statement -> identifier COLEQ . expression
    (53) expression -> . expression and_or expression_m
    (54) expression -> . expression_m
    (55) expression_m -> . expression_s
    (56) expression_m -> . expression_m sign expression_s
    (57) expression_s -> . element
    (58) expression_s -> . expression_s psign element
    (71) element -> . identifier
    (72) element -> . integer
    (73) element -> . string
    (74) element -> . char
    (75) element -> . LPAREN expression RPAREN
    (76) element -> . NOT element
    (77) identifier -> . ID
    (78) integer -> . ICONST
    (79) string -> . SCONST
    (80) char -> . CCONST

    LPAREN          shift and go to state 34
    NOT             shift and go to state 35
    ID              shift and go to state 19
    ICONST          shift and go to state 36
    SCONST          shift and go to state 37
    CCONST          shift and go to state 38

    identifier                     shift and go to state 30
    expression                     shift and go to state 46
    expression_m                   shift and go to state 27
    expression_s                   shift and go to state 28
    element                        shift and go to state 29
    integer                        shift and go to state 31
    string                         shift and go to state 32
    char                           shift and go to state 33

state 23

    (40) procedure_or_function_call -> identifier LPAREN . param_list RPAREN
    (42) param_list -> . param_list COMMA param
    (43) param_list -> . param
    (44) param -> . expression
    (53) expression -> . expression and_or expression_m
    (54) expression -> . expression_m
    (55) expression_m -> . expression_s
    (56) expression_m -> . expression_m sign expression_s
    (57) expression_s -> . element
    (58) expression_s -> . expression_s psign element
    (71) element -> . identifier
    (72) element -> . integer
    (73) element -> . string
    (74) element -> . char
    (75) element -> . LPAREN expression RPAREN
    (76) element -> . NOT element
    (77) identifier -> . ID
    (78) integer -> . ICONST
    (79) string -> . SCONST
    (80) char -> . CCONST

    LPAREN          shift and go to state 34
    NOT             shift and go to state 35
    ID              shift and go to state 19
    ICONST          shift and go to state 36
    SCONST          shift and go to state 37
    CCONST          shift and go to state 38

    identifier                     shift and go to state 30
    param_list                     shift and go to state 47
    param                          shift and go to state 48
    expression                     shift and go to state 49
    expression_m                   shift and go to state 27
    expression_s                   shift and go to state 28
    element                        shift and go to state 29
    integer                        shift and go to state 31
    string                         shift and go to state 32
    char                           shift and go to state 33

state 24

    (30) statement_sequence -> statement SEMI . statement_sequence
    (30) statement_sequence -> . statement SEMI statement_sequence
    (31) statement_sequence -> . statement
    (32) statement -> . assignment_statement
    (33) statement -> . statement_part
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . repeat_statement
    (37) statement -> . for_statement
    (38) statement -> . procedure_or_function_call
    (39) statement -> .
    (52) assignment_statement -> . identifier COLEQ expression
    (29) statement_part -> . BEGIN statement_sequence END
    (45) if_statement -> . IF expression THEN statement ELSE statement ENDIF
    (46) if_statement -> . IF expression THEN statement ELSIF statement ENDIF
    (47) if_statement -> . IF expression THEN statement ENDIF
    (48) while_statement -> . WHILE expression LOOP statement ENDLOOP
    (49) repeat_statement -> . REPEAT statement UNTIL expression
    (50) for_statement -> . FOR assignment_statement TO expression LOOP statement ENDLOOP
    (51) for_statement -> . FOR assignment_statement DOWNTO expression LOOP statement ENDLOOP
    (40) procedure_or_function_call -> . identifier LPAREN param_list RPAREN
    (41) procedure_or_function_call -> . identifier
    (77) identifier -> . ID

    SEMI            reduce using rule 39 (statement -> .)
    $end            reduce using rule 39 (statement -> .)
    END             reduce using rule 39 (statement -> .)
    BEGIN           shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    statement                      shift and go to state 6
    statement_sequence             shift and go to state 50
    assignment_statement           shift and go to state 7
    statement_part                 shift and go to state 8
    if_statement                   shift and go to state 9
    while_statement                shift and go to state 10
    repeat_statement               shift and go to state 11
    for_statement                  shift and go to state 12
    procedure_or_function_call     shift and go to state 13
    identifier                     shift and go to state 5

state 25

    (29) statement_part -> BEGIN statement_sequence . END

    END             shift and go to state 51


state 26

    (45) if_statement -> IF expression . THEN statement ELSE statement ENDIF
    (46) if_statement -> IF expression . THEN statement ELSIF statement ENDIF
    (47) if_statement -> IF expression . THEN statement ENDIF
    (53) expression -> expression . and_or expression_m
    (59) and_or -> . AND
    (60) and_or -> . OR

    THEN            shift and go to state 52
    AND             shift and go to state 54
    OR              shift and go to state 55

    and_or                         shift and go to state 53

state 27

    (54) expression -> expression_m .
    (56) expression_m -> expression_m . sign expression_s
    (63) sign -> . PLUS
    (64) sign -> . MINUS
    (65) sign -> . EQ
    (66) sign -> . NE
    (67) sign -> . LT
    (68) sign -> . LE
    (69) sign -> . GT
    (70) sign -> . GE

    THEN            reduce using rule 54 (expression -> expression_m .)
    AND             reduce using rule 54 (expression -> expression_m .)
    OR              reduce using rule 54 (expression -> expression_m .)
    LOOP            reduce using rule 54 (expression -> expression_m .)
    SEMI            reduce using rule 54 (expression -> expression_m .)
    $end            reduce using rule 54 (expression -> expression_m .)
    END             reduce using rule 54 (expression -> expression_m .)
    UNTIL           reduce using rule 54 (expression -> expression_m .)
    TO              reduce using rule 54 (expression -> expression_m .)
    DOWNTO          reduce using rule 54 (expression -> expression_m .)
    ELSE            reduce using rule 54 (expression -> expression_m .)
    ELSIF           reduce using rule 54 (expression -> expression_m .)
    ENDIF           reduce using rule 54 (expression -> expression_m .)
    ENDLOOP         reduce using rule 54 (expression -> expression_m .)
    RPAREN          reduce using rule 54 (expression -> expression_m .)
    COMMA           reduce using rule 54 (expression -> expression_m .)
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58
    EQ              shift and go to state 59
    NE              shift and go to state 60
    LT              shift and go to state 61
    LE              shift and go to state 62
    GT              shift and go to state 63
    GE              shift and go to state 64

    sign                           shift and go to state 56

state 28

    (55) expression_m -> expression_s .
    (58) expression_s -> expression_s . psign element
    (61) psign -> . TIMES
    (62) psign -> . DIV

    PLUS            reduce using rule 55 (expression_m -> expression_s .)
    MINUS           reduce using rule 55 (expression_m -> expression_s .)
    EQ              reduce using rule 55 (expression_m -> expression_s .)
    NE              reduce using rule 55 (expression_m -> expression_s .)
    LT              reduce using rule 55 (expression_m -> expression_s .)
    LE              reduce using rule 55 (expression_m -> expression_s .)
    GT              reduce using rule 55 (expression_m -> expression_s .)
    GE              reduce using rule 55 (expression_m -> expression_s .)
    THEN            reduce using rule 55 (expression_m -> expression_s .)
    AND             reduce using rule 55 (expression_m -> expression_s .)
    OR              reduce using rule 55 (expression_m -> expression_s .)
    LOOP            reduce using rule 55 (expression_m -> expression_s .)
    SEMI            reduce using rule 55 (expression_m -> expression_s .)
    $end            reduce using rule 55 (expression_m -> expression_s .)
    END             reduce using rule 55 (expression_m -> expression_s .)
    UNTIL           reduce using rule 55 (expression_m -> expression_s .)
    TO              reduce using rule 55 (expression_m -> expression_s .)
    DOWNTO          reduce using rule 55 (expression_m -> expression_s .)
    ELSE            reduce using rule 55 (expression_m -> expression_s .)
    ELSIF           reduce using rule 55 (expression_m -> expression_s .)
    ENDIF           reduce using rule 55 (expression_m -> expression_s .)
    ENDLOOP         reduce using rule 55 (expression_m -> expression_s .)
    RPAREN          reduce using rule 55 (expression_m -> expression_s .)
    COMMA           reduce using rule 55 (expression_m -> expression_s .)
    TIMES           shift and go to state 66
    DIV             shift and go to state 67

    psign                          shift and go to state 65

state 29

    (57) expression_s -> element .

    TIMES           reduce using rule 57 (expression_s -> element .)
    DIV             reduce using rule 57 (expression_s -> element .)
    PLUS            reduce using rule 57 (expression_s -> element .)
    MINUS           reduce using rule 57 (expression_s -> element .)
    EQ              reduce using rule 57 (expression_s -> element .)
    NE              reduce using rule 57 (expression_s -> element .)
    LT              reduce using rule 57 (expression_s -> element .)
    LE              reduce using rule 57 (expression_s -> element .)
    GT              reduce using rule 57 (expression_s -> element .)
    GE              reduce using rule 57 (expression_s -> element .)
    THEN            reduce using rule 57 (expression_s -> element .)
    AND             reduce using rule 57 (expression_s -> element .)
    OR              reduce using rule 57 (expression_s -> element .)
    LOOP            reduce using rule 57 (expression_s -> element .)
    SEMI            reduce using rule 57 (expression_s -> element .)
    $end            reduce using rule 57 (expression_s -> element .)
    END             reduce using rule 57 (expression_s -> element .)
    UNTIL           reduce using rule 57 (expression_s -> element .)
    TO              reduce using rule 57 (expression_s -> element .)
    DOWNTO          reduce using rule 57 (expression_s -> element .)
    ELSE            reduce using rule 57 (expression_s -> element .)
    ELSIF           reduce using rule 57 (expression_s -> element .)
    ENDIF           reduce using rule 57 (expression_s -> element .)
    ENDLOOP         reduce using rule 57 (expression_s -> element .)
    RPAREN          reduce using rule 57 (expression_s -> element .)
    COMMA           reduce using rule 57 (expression_s -> element .)


state 30

    (71) element -> identifier .

    TIMES           reduce using rule 71 (element -> identifier .)
    DIV             reduce using rule 71 (element -> identifier .)
    PLUS            reduce using rule 71 (element -> identifier .)
    MINUS           reduce using rule 71 (element -> identifier .)
    EQ              reduce using rule 71 (element -> identifier .)
    NE              reduce using rule 71 (element -> identifier .)
    LT              reduce using rule 71 (element -> identifier .)
    LE              reduce using rule 71 (element -> identifier .)
    GT              reduce using rule 71 (element -> identifier .)
    GE              reduce using rule 71 (element -> identifier .)
    THEN            reduce using rule 71 (element -> identifier .)
    AND             reduce using rule 71 (element -> identifier .)
    OR              reduce using rule 71 (element -> identifier .)
    LOOP            reduce using rule 71 (element -> identifier .)
    SEMI            reduce using rule 71 (element -> identifier .)
    $end            reduce using rule 71 (element -> identifier .)
    END             reduce using rule 71 (element -> identifier .)
    UNTIL           reduce using rule 71 (element -> identifier .)
    TO              reduce using rule 71 (element -> identifier .)
    DOWNTO          reduce using rule 71 (element -> identifier .)
    ELSE            reduce using rule 71 (element -> identifier .)
    ELSIF           reduce using rule 71 (element -> identifier .)
    ENDIF           reduce using rule 71 (element -> identifier .)
    ENDLOOP         reduce using rule 71 (element -> identifier .)
    RPAREN          reduce using rule 71 (element -> identifier .)
    COMMA           reduce using rule 71 (element -> identifier .)


state 31

    (72) element -> integer .
